- add swagger UI release - enable model API to be viewed in frontend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,6 +57,7 @@ if (location.href.substr(0, betasitename.length) == betasitename) {
 <script src="js/account-page.js"></script>
 <script src="js/access-page.js"></script>
 <script src="js/admin-page.js"></script>
+<script src="js/api-page.js"></script>
 <script src="js/evekit.js"></script>
 <link rel="shortcut icon" href="resources/favicon.ico" />
 <title>EveKit</title>
