--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,32 +9,20 @@
 <link type="text/css" rel="stylesheet" href="css/evekit.css">
 <link type="text/css" rel="stylesheet" href="themes/default/evekit.css">
 <script>
-var betasitename = 'https://evekit-beta.orbital.enterprises';
-if (location.href.substr(0, betasitename.length) == betasitename) {
-  // Beta Site Tracking
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-51695895-2', 'auto');
-  ga('send', 'pageview');
-} else {
-  // Live Site Tracking
-  (function(i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function() {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js',
-      'ga');
-  ga('create', 'UA-51695895-1', 'auto');
-  ga('send', 'pageview');
-}
+// Setup google analytics
+(function(i, s, o, g, r, a, m) {
+  i['GoogleAnalyticsObject'] = r;
+  i[r] = i[r] || function() {
+    (i[r].q = i[r].q || []).push(arguments)
+  }, i[r].l = 1 * new Date();
+  a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+  a.async = 1;
+  a.src = g;
+  m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js',
+    'ga');
+ga('create', 'UA-51695895-1', 'auto');
+ga('send', 'pageview');
 </script>
 <script src="vendor/jquery-2.1.1.min.js"></script>
 <script src="vendor/jquery-ui-1.11.1/jquery-ui.min.js"></script>
