--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link type="text/css" rel="stylesheet" href="vendor/jquery-ui-1.11.1/jquery-ui.min.css">
+<link type="text/css" rel="stylesheet" href="vendor/font-awesome-4.6.3/css/font-awesome.min.css">
 <link type="text/css" rel="stylesheet" href="themes/default/bootstrap/css/bootstrap.min.css">
 <link type="text/css" rel="stylesheet" href="themes/default/bootstrap/css/bootstrap-theme.min.css">
 <link type="text/css" rel="stylesheet" href="css/auth-buttons.css">
@@ -18,6 +19,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 ga('create', 'UA-76800053-1', 'auto');
 ga('send', 'pageview');
 </script>
+<script src="vendor/d3.min.js"></script>
 <script src="vendor/jquery-2.1.1.min.js"></script>
 <script src="vendor/jquery-ui-1.11.1/jquery-ui.min.js"></script>
 <script src="vendor/bootstrap-3.2.0/js/bootstrap.min.js"></script>
@@ -26,7 +28,10 @@ ga('send', 'pageview');
 <script src="vendor/angular-1.3.0/angular-resource.min.js"></script>
 <script src="vendor/angular-1.3.0/angular-sanitize.min.js"></script>
 <script src="vendor/URI.js"></script>
+<script src="vendor/angular-vertilize.min.js"></script>
+<script src="vendor/jquery.timepicker.min.js"></script>
 <script src="js/swagger-client.min.js"></script>
+<script src="js/modes.js"></script>
 <script src="js/remote.js"></script>
 <script src="js/pager.js"></script>
 <script src="js/account-ws.js"></script>
@@ -40,13 +45,17 @@ ga('send', 'pageview');
 <script src="js/access-page.js"></script>
 <script src="js/admin-page.js"></script>
 <script src="js/api-page.js"></script>
+<script src="js/xmlproxy-page.js"></script>
+<script src="js/md-page.js"></script>
+<script src="js/sde-page.js"></script>
 <script src="js/evekit.js"></script>
 <link rel="shortcut icon" href="resources/favicon.ico" />
 <title>EveKit</title>
 </head>
 <body style="padding-top: 60px; padding-bottom: 40px;">
 	<nav id="nav-bar" class="navbar navbar-inverse navbar-fixed-top"
-		role="navigation" style="margin-bottom: 0px;">
+		role="navigation" style="margin-bottom: 0px;"
+    ng-controller="EveKitAuthCtrl">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -59,11 +68,36 @@ ga('send', 'pageview');
 				<a class="navbar-brand" href=""><img src="resources/images/tape_logo.png" alt="EveKit" /></a>
 			</div>
 
+      <!-- Tool selection buttons -->
+      <div class="btn-group btn-group-xs navbar-left" style="padding-top: 3px">
+        <button type="button" 
+                ng-class="getToolModeClasses('evekit')"
+                ng-click="setToolMode('evekit')">
+          <i class="fa fa-users fa-2x" title="Account Synchronization and Model Access"></i>
+        </button>
+        <button type="button" 
+                ng-class="getToolModeClasses('proxy')"
+                ng-click="setToolMode('proxy')">
+          <i class="fa fa-exchange fa-2x" title="EVE XML API Proxy"></i>            
+        </button>
+        <button type="button" 
+                ng-class="getToolModeClasses('sde')"
+                ng-click="setToolMode('sde')">
+          <i class="fa fa-database fa-2x" title="EVE Static Data Export"></i>            
+        </button>
+        <button type="button" 
+                ng-class="getToolModeClasses('marketdata')"
+                ng-click="setToolMode('marketdata')">
+          <i class="fa fa-line-chart fa-2x" title="EVE Marketdata"></i>            
+        </button>
+      </div>        
+
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse"
-				id="bs-example-navbar-collapse-1" ng-controller="EveKitAuthCtrl">
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <!-- breadcrumb for current page -->
 				<p class="navbar-text label label-info visible-md-inline visible-lg-inline"
 					style="color: white; padding: 5px;">{{$route.current.scope.sectionName}}</p>
+        <!--  menu for current tool -->
 				<ul class="nav navbar-nav">
 					<li ng-repeat="topmenu in evekitmenus|filter:menufilter" class="dropdown" title="{{topmenu.title}}">
 					 <a class="dropdown-toggle" data-toggle="dropdown" href="">{{topmenu.display}} <span class="caret"></span></a>
@@ -74,6 +108,7 @@ ga('send', 'pageview');
 						</ul>
 					 </li>
 				</ul>
+        <!-- login/logout -->
 				<ul id="nav-bar-right" class="nav navbar-nav navbar-right">
 					<li id="login-dropdown"
 						style="padding-top: 12px; padding-right: 5px;"
