--- a/src/main/webapp/tableau.html
+++ b/src/main/webapp/tableau.html
@@ -72,14 +72,16 @@
               <!-- API type selector -->
               <div class="form-group">
                 <label class="col-sm-1 control-label" for="api-type">API</label>
-                <div class="col-sm-2 radio">
-                  <label><input name="api-type" type="radio"
-                    ng-model="apiType" value="MODEL"
-                    ng-change="changeAPIType()"
-                  >MODEL</label>&nbsp;&nbsp; <label><input
-                    name="api-type" type="radio" ng-model="apiType"
-                    value="REFERENCE" ng-change="changeAPIType()"
-                  >REFERENCE</label>
+                <div class="col-sm-4 radio">
+                  <label>
+                    <input name="api-type" type="radio" ng-model="apiType" value="MODEL" ng-change="changeAPIType()">MODEL
+                  </label>&nbsp;&nbsp; 
+                  <label>
+                    <input name="api-type" type="radio" ng-model="apiType" value="REFERENCE" ng-change="changeAPIType()">REFERENCE
+                  </label>
+                  <label>
+                    <input name="api-type" type="radio" ng-model="apiType" value="SDE" ng-change="changeAPIType()">SDE (LATEST)
+                  </label>
                 </div>
               </div>
               <!-- API key and hash (for MODEL api) -->
@@ -156,7 +158,7 @@
                 </div>
               </div>
               <!-- Query time selector -->
-              <div class="form-group">
+              <div class="form-group" ng-show="apiType != 'SDE'">
                 <div class="col-sm-4">
                   <div class="input-group">
                     <div class="input-group-btn">
@@ -187,9 +189,7 @@
                   </div>
                 </div>
               </div>
-              <div class="form-group"
-                ng-show="selectedTimeQuery == 'SELECT'"
-              >
+              <div class="form-group" ng-show="(apiType != 'SDE') && (selectedTimeQuery == 'SELECT')">
                 <div class="col-sm-4">
                   <div class="input-group">
                     <span class="input-group-addon" id="tq-select-addon">DATE/TIME
@@ -206,7 +206,7 @@
                 </div>
               </div>
               <div class="form-group"
-                ng-show="selectedTimeQuery == 'RANGE'"
+                ng-show="(apiType != 'SDE') && (selectedTimeQuery == 'RANGE')"
               >
                 <div class="row" style="margin-bottom: 5px;">
                   <div class="col-sm-4">
@@ -248,7 +248,7 @@
                 </div>
               </div>
               <div class="form-group"
-                ng-show="selectedTimeQuery == 'MANUAL'"
+                ng-show="(apiType != 'SDE') && (selectedTimeQuery == 'MANUAL')"
               >
                 <div class="col-sm-4">
                   <div class="input-group">
