--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -222,7 +222,7 @@ ga('send', 'pageview');
     </td>
     <td class="evekit-about" ng-controller="EveKitVersionCtrl" style="white-space: nowrap; padding-right: 10px">
 			  <span class="evekit-branch" title="Build {{eveKitBuildDate}}">EveKit Version {{eveKitVersion}}</span><br />
-			  <span>&copy; evekit.orbital.enterprises 2016 -- EVE Online is &copy; CCP Games 1997-2016</span>
+			  <span>&copy; evekit.orbital.enterprises 2016-2017 -- EVE Online is &copy; CCP Games 1997-2017</span>
     </td>
     </tr>
     </table>
