prep for 4.0 release

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,7 +52,7 @@ ga('send', 'pageview');
 <link rel="shortcut icon" href="resources/favicon.ico" />
 <title>EveKit</title>
 </head>
-<body style="padding-top: 60px; padding-bottom: 40px;">
+<body style="padding-top: 60px; padding-bottom: 40px;" ng-cloak>
 	<nav id="nav-bar" class="navbar navbar-inverse navbar-fixed-top"
 		role="navigation" style="margin-bottom: 0px;"
     ng-controller="EveKitAuthCtrl">
